# LibQPEP

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CVLib.cpp  CVLib.h  CovEstimation.cpp  CovEstimation.h  LibQPEP-basics.cmake  LibQPEPConfig.cmake.in  QPEP.h  QPEP_grobner.cpp  QPEP_grobner.h  QPEP_lm_single.cpp  QPEP_lm_single.h  README.md  generateProjectedPoints.cpp  generateProjectedPoints.h  hand_eye_WQD.cpp  hand_eye_WQD.h  hand_eye_small_rotation.cpp  hand_eye_small_rotation.h  main.cpp  main.cpp~  misc_hand_eye_funcs.cpp  misc_hand_eye_funcs.h  misc_pTop_funcs.cpp  misc_pTop_funcs.h  misc_pnp_funcs.cpp  misc_pnp_funcs.h  pTop_WQD.cpp  pTop_WQD.h  pTop_small_rotation.cpp  pTop_small_rotation.h  pnp_WQD.cpp  pnp_WQD.h  solver_WQ.cpp  solver_WQ.h  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx.cpp  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx.h  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx_helper.cpp  (+9 more)
.github/workflows/: linux-x64-cpu-clang.yml  linux-x64-cpu-gcc.yml
MATLAB/: nguyen_covariance.m  syms_dq.m  syms_hand_eye.m  syms_pTop.m  syms_pnp.m  test_cov_hand_eye.m  test_cov_pTop.m  test_cov_pnp.m  test_rel_att.m  test_stewart.m
MATLAB/YALMIP/extras/: sdpsettings.m  sdpsettings_original.m
MATLAB/YALMIP/solvers/: calllmilab.m  callsdpagmp.m  definesolvers.m  definesolvers_original.m
MATLAB/calib/: pattern_tfs  realsense-calib.mat  robot_tfs  zed-M-calib.mat
MATLAB/cope/: SE3lib.py  __init__.py  axxbcovariance.py  particlelib.py  transformation.py
MATLAB/func_files/: D_func_hand_eye_new.m  D_func_pTop_new.m  D_func_pnp_new.m  G_func_hand_eye_new.m  G_func_pTop_new.m  G_hand_eye_func_new.m  G_pTop_func_new.m  G_pnp_func_new.m  J_func_hand_eye.m  J_func_pTop.m  J_pnp_loss.m  Jacob_hand_eye_func_new.m  Jacob_pTop_func_new.m  Jacob_pnp_func_new.m  Q_hand_eye_func_new.m  Q_pTop_func_new.m  Q_pnp_func_new.m  W_hand_eye_func_new.m  W_pTop_func_new.m  W_pnp_func_new.m  c_func_hand_eye_new.m  c_func_pTop_new.m  coef_J_pure_hand_eye_func_new.m  coef_J_pure_pTop_func_new.m  coef_J_pure_pnp_func_new.m  coef_Jacob1_qt_hand_eye_func_new.m  coef_Jacob1_qt_pTop_func_new.m  coef_Jacob1_qt_pnp_func_new.m  coef_Jacob2_qt_hand_eye_func_new.m  coef_Jacob2_qt_pTop_func_new.m  coef_Jacob2_qt_pnp_func_new.m  coef_Jacob3_qt_hand_eye_func_new.m  coef_Jacob3_qt_pTop_func_new.m  coef_Jacob3_qt_pnp_func_new.m  coef_Jacob4_qt_hand_eye_func_new.m  coef_Jacob4_qt_pTop_func_new.m  coef_Jacob4_qt_pnp_func_new.m  coef_f_q_sym_hand_eye_func_new.m  coef_f_q_sym_pTop_func_new.m  coef_f_q_sym_pnp_func_new.m  (+37 more)
MATLAB/homotopy/: BezoutMatrix.m  BezoutMatrix.p  ClearZeros.p  CoefMat2PolynString.m  CoefMat2PolynString.p  Coeff.m  CoeffVec2ConvMat.m  CoeffVec2ConvMat.p  CompanionMatrix.m  CompanionMatrix.p  ConvolutionMatrix.m  ConvolutionMatrix.p  ExtendedGCD.m  ExtendedGCD.p  FactorDistance.m  FactorDistance.p  GaussNewton.m  GaussNewton.p  GcdCondition.m  GcdCondition.p  GetVariables.m  GetVariables.p  GivensMatrix.m  GivensMatrix.p  GrlexIndex2Monomial.m  GrlexIndex2Monomial.p  GrlexMonomialIndex.m  GrlexMonomialIndex.p  GrlexNextMonomial.m  GrlexNextMonomial.p  HouseholderTransform.m  HouseholderTransform.p  HouseholderTransformRight.m  HouseholderTransformRight.p  HouseholderVector.m  HouseholderVector.p  IntegerInverse.m  IntegerInverse.p  Irand.m  Irand.p  (+170 more)
MATLAB/sdpt3/: README  README.md  install_sdpt3.m  sdpt3.m
MATLAB/sdpt3/HSDSolver/: HSDHKMcorr.m  HSDHKMdirfun.m  HSDHKMpred.m  HSDHKMrhsfun.m  HSDNTcorr.m  HSDNTdirfun.m  HSDNTpred.m  HSDNTrhsfun.m  HSDbicgstab.m  HSDlinsysolve.m  HSDsortA.m  HSDsqlp.m  HSDsqlpCpert.m  (+3 more)
MATLAB/solvers/: andreff.m  compute_coeffs_1_2_3_4_5_9_13_17_33_49.m  compute_coeffs_1_2_3_4_5_9_13_17_33_49_approx.m  compute_coeffs_solver_WQ.m  compute_coeffs_solver_WQ_approx.m  setup_elimination_template_1_2_3_4_5_9_13_17_33_49.m  setup_elimination_template_1_2_3_4_5_9_13_17_33_49_approx.m  setup_elimination_template_solver_WQ.m  setup_elimination_template_solver_WQ_approx.m  solver_WQ.m  solver_WQ_1_2_3_4_5_9_13_17_33_49.m  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx.m  solver_WQ_approx.m
MATLAB/utils/: P1_matrix.m  P2_matrix.m  P3_matrix.m  QPEP_WQ_grobner.m  QPEP_lm_single.m  covx.m  dcm2Lie.m  double_.m  error_ellipse_linestyle.m  estimateWorldCameraPoseNew.m  generateFuncFile.m  generateProjectedPoints_.m  logR.m  mat2nparray.m  neglect_tiny_terms.m  norm_quat.m  nparray2mat.m  optimize_quat_cov.m  optimize_quat_cov2.m  orthonormalize.m  plot_R_cov.m  plot_cov_linestyle.m  plot_q_cov.m  positive_quat.m  pymat.m  q2R.m  showSyms.m  skew.m  solveSyms.m  sym2vec.m  sym2vec3.m
csdp/include/: blockmat.h  declarations.h  index.h
csdp/lib/: Fnorm.c  add_mat.c  addscaledmat.c  allocmat.c  calc_pobj.c  chol.c  copy_mat.c  easysdp.c  initparams.c  initsoln.c  linesearch.c  make_i.c  makefill.c  mat_mult.c  mat_multsp.c  matvec.c  op_o.c  packed.c  psd_feas.c  readprob.c  readsol.c  sdp.c  solvesys.c  sortentries.c  sym_mat.c  trace_prod.c  user_exit.c  writeprob.c  writesol.c  zero_mat.c
data/: hand_eye_data-20pt-1.txt  pTop_data-10000pt-small-angle.txt  pTop_data-100pt-1.txt  pTop_data-100pt-2.txt  pTop_data-100pt-3.txt  pTop_data-20pt-1.txt  pTop_data-20pt-2.txt  pTop_data-20pt-3.txt  pTop_data-2500pt-1.txt  pTop_data-4096pt-1.txt  pTop_data-9pt-1.txt  pnp_data-4pt-1.txt  pnp_data-5000pt-1.txt  pnp_data-500pt-1.txt  pnp_data-50pt-1.txt  pnp_data-5pt-1.txt
fsolve_wrapper/: QPEP_fsolve_func.h  linearLeastSquares.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  xnrm2.h  xzlarf.h  xzlarfg.h
include/: CVLib.h  CovEstimation.h  QPEP.h  QPEP_grobner.h  generateProjectedPoints.h  misc_hand_eye_funcs.h  misc_pnp_funcs.h  pnp_WQD.h  solver_WQ.h  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx_helper.h  solver_WQ_helper.h  utils.h
src/: CVLib.cpp  QPEP_grobner.cpp  benchmark_linear_solvers.cpp  generateProjectedPoints.cpp  main.cpp  misc_pTop_funcs.cpp  misc_pnp_funcs.cpp  pTop_WQD.cpp  pTop_small_rotation.cpp  solver_WQ.cpp  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx.cpp  solver_WQ_1_2_3_4_5_9_13_17_33_49_approx_helper.cpp  solver_WQ_approx.cpp  solver_WQ_approx_helper.cpp  utils.cpp
(+124 files in other folders)
